<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            >
            <ImageView
                android:id="@+id/user_image"
                android:layout_width="@dimen/list_item_image_width"
                android:layout_height="@dimen/list_item_image_height"
                android:layout_marginRight="@dimen/list_item_image_margin"
                android:layout_marginEnd="@dimen/list_item_image_margin"
                android:transitionName="@string/transition_user_image"
                tools:src="@drawable/user_placeholder"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/user_image"
                >
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/title_margin"
                    android:layout_marginEnd="@dimen/title_margin"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:transitionName="@string/transition_user_name"
                    tools:text="User name"
                    />
                <TextView
                    android:id="@+id/user_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightGray"
                    android:textSize="16sp"
                    android:transitionName="@string/transition_user_screen_name"
                    tools:text="\@user"
                    />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/user_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:autoLink="all"
            tools:text="Test description"
            />

        <TextView
            android:id="@+id/user_followers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            tools:text="10 followers"
            />

        <TextView
            android:id="@+id/user_statuses_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            tools:text="10 followers"
            />

        <TextView
            android:id="@+id/user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            tools:text="10 followers"
            />
    </LinearLayout>
</FrameLayout>